--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
         </div>
     </div>
     <script src="script.js"></script>
+    <div id="easterEggTracker" class="easter-egg-tracker"></div>
 </body>
 </html>
